--- a/seekbar24hour/build.gradle
+++ b/seekbar24hour/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     }
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 // build a jar with source files
